objects/pse__Forecast__c.object
<CustomObject>
    <customHelpPage>pse__ForecastsHelp</customHelpPage>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>pse__Best_Case__c</fullName>
        <formula>IF(NOT(ISNULL(pse__Override_Best_Case__c)), pse__Override_Best_Case__c, pse__Entered_Best_Case__c)</formula>
        <label>Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Commit__c</fullName>
        <formula>IF(NOT(ISNULL(pse__Override_Commit__c)), pse__Override_Commit__c, pse__Entered_Commit__c)</formula>
        <label>Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Downside__c</fullName>
        <formula>IF(NOT(ISNULL(pse__Override_Downside__c)), pse__Override_Downside__c, pse__Entered_Downside__c)</formula>
        <label>Downside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Entered_Best_Case__c</fullName>
        <label>Entered Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Entered_Commit__c</fullName>
        <label>Entered Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Entered_Downside__c</fullName>
        <label>Entered Downside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Entered_Forecast__c</fullName>
        <label>Entered Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Entered_Most_Likely__c</fullName>
        <label>Entered Most Likely</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Entered_Upside__c</fullName>
        <label>Entered Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Entered_Worst_Case__c</fullName>
        <label>Entered Worst Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Forecast__c</fullName>
        <formula>IF(NOT(ISNULL(pse__Override_Forecast__c)), pse__Override_Forecast__c, pse__Entered_Forecast__c)</formula>
        <label>Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Group_Override_This_Best_Case__c</fullName>
        <label>Group Override This Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Group_Override_This_Commit__c</fullName>
        <label>Group Override This Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Group_Override_This_Downside__c</fullName>
        <label>Group Override This Downside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Group_Override_This_Forecast__c</fullName>
        <label>Group Override This Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Group_Override_This_Most_Likely__c</fullName>
        <label>Group Override This Most Likely</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Group_Override_This_Upside__c</fullName>
        <label>Group Override This Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Group_Override_This_Worst_Case__c</fullName>
        <label>Group Override This Worst Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Most_Likely__c</fullName>
        <formula>IF(NOT(ISNULL(pse__Override_Most_Likely__c)), pse__Override_Most_Likely__c, pse__Entered_Most_Likely__c)</formula>
        <label>Most Likely</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Override_Best_Case__c</fullName>
        <label>Override Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Override_Commit__c</fullName>
        <label>Override Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Override_Downside__c</fullName>
        <label>Override Downside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Override_Forecast__c</fullName>
        <label>Override Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Override_Most_Likely__c</fullName>
        <label>Override Most Likely</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Override_Upside__c</fullName>
        <label>Override Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Override_Worst_Case__c</fullName>
        <label>Override Worst Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Plan__c</fullName>
        <description>Plan copied from Region/Group/Practice at time of forecast entry</description>
        <label>Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Practice_Override_This_Best_Case__c</fullName>
        <label>Practice Override This Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Practice_Override_This_Commit__c</fullName>
        <label>Practice Override This Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Practice_Override_This_Downside__c</fullName>
        <label>Practice Override This Downside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Practice_Override_This_Forecast__c</fullName>
        <label>Practice Override This Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Practice_Override_This_Most_Likely__c</fullName>
        <label>Practice Override This Most Likely</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Practice_Override_This_Upside__c</fullName>
        <label>Practice Override This Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Practice_Override_This_Worst_Case__c</fullName>
        <label>Practice Override This Worst Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Previous_Period_Best_Case__c</fullName>
        <label>Previous Period Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Previous_Period_Commit__c</fullName>
        <label>Previous Period Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Previous_Period_Downside__c</fullName>
        <label>Previous Period Downside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Previous_Period_Forecast__c</fullName>
        <label>Previous Period Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Previous_Period_Most_Likely__c</fullName>
        <label>Previous Period Most Likely</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Previous_Period_Upside__c</fullName>
        <label>Previous Period Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Previous_Period_Worst_Case__c</fullName>
        <label>Previous Period Worst Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region_Override_This_Best_Case__c</fullName>
        <label>Region Override This Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Region_Override_This_Commit__c</fullName>
        <label>Region Override This Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Region_Override_This_Downside__c</fullName>
        <label>Region Override This Downside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Region_Override_This_Forecast__c</fullName>
        <label>Region Override This Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Region_Override_This_Most_Likely__c</fullName>
        <label>Region Override This Most Likely</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Region_Override_This_Upside__c</fullName>
        <label>Region Override This Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Region_Override_This_Worst_Case__c</fullName>
        <label>Region Override This Worst Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Sub_Level_Best_Case__c</fullName>
        <label>Sub Level Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Sub_Level_Commit__c</fullName>
        <label>Sub Level Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Sub_Level_Downside__c</fullName>
        <label>Sub Level Downside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Sub_Level_Forecast__c</fullName>
        <label>Sub Level Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Sub_Level_Most_Likely__c</fullName>
        <label>Sub Level Most Likely</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Sub_Level_Upside__c</fullName>
        <label>Sub Level Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Sub_Level_Worst_Case__c</fullName>
        <label>Sub Level Worst Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Summary_Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Summary Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipName>Forecasts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__This_Best_Case__c</fullName>
        <label>This Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__This_Commit__c</fullName>
        <label>This Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__This_Downside__c</fullName>
        <label>This Downside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__This_Forecast__c</fullName>
        <label>This Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__This_Most_Likely__c</fullName>
        <label>This Most Likely</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__This_Upside__c</fullName>
        <label>This Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__This_Worst_Case__c</fullName>
        <label>This Worst Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period__c</fullName>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipName>Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Upside__c</fullName>
        <formula>IF(NOT(ISNULL(pse__Override_Upside__c)), pse__Override_Upside__c, pse__Entered_Upside__c)</formula>
        <label>Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Variance_Best_Case__c</fullName>
        <formula>pse__Best_Case__c - pse__Previous_Period_Best_Case__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Variance_Commit__c</fullName>
        <formula>pse__Commit__c - pse__Previous_Period_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Variance_Downside__c</fullName>
        <formula>pse__Downside__c - pse__Previous_Period_Downside__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Downside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Variance_Forecast__c</fullName>
        <formula>pse__Forecast__c - pse__Previous_Period_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Variance_Most_Likely__c</fullName>
        <formula>pse__Most_Likely__c - pse__Previous_Period_Most_Likely__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Most Likely</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Variance_Percent_Best_Case__c</fullName>
        <formula>pse__Variance_Best_Case__c /  pse__Previous_Period_Best_Case__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Percent Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Variance_Percent_Commit__c</fullName>
        <formula>pse__Variance_Commit__c /  pse__Previous_Period_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Percent Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Variance_Percent_Downside__c</fullName>
        <formula>pse__Variance_Downside__c / pse__Previous_Period_Downside__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Percent Downside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Variance_Percent_Forecast__c</fullName>
        <formula>pse__Variance_Forecast__c /  pse__Previous_Period_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Percent Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Variance_Percent_Most_Likely__c</fullName>
        <formula>pse__Variance_Most_Likely__c /  pse__Previous_Period_Most_Likely__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Percent Most Likely</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Variance_Percent_Upside__c</fullName>
        <formula>pse__Variance_Upside__c /  pse__Previous_Period_Upside__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Percent Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Variance_Percent_Worst_Case__c</fullName>
        <formula>pse__Variance_Worst_Case__c /  pse__Previous_Period_Worst_Case__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Percent Worst Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Variance_Upside__c</fullName>
        <formula>pse__Upside__c - pse__Previous_Period_Upside__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Variance_Worst_Case__c</fullName>
        <formula>pse__Worst_Case__c - pse__Previous_Period_Worst_Case__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance Worst Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Worst_Case__c</fullName>
        <formula>IF(NOT(ISNULL(pse__Override_Worst_Case__c)), pse__Override_Worst_Case__c, pse__Entered_Worst_Case__c)</formula>
        <label>Worst Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>zDeprecated:Forecast</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Region__c</columns>
        <columns>pse__Practice__c</columns>
        <columns>pse__Group__c</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Summary_Time_Period__c</columns>
        <columns>pse__Time_Period__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Forecast{0000000}</displayFormat>
        <label>Forecast ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>zDeprecated:Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>